# pat-me

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: command.rs  common.rs  config.rs  main.rs  notify.rs
tests/: cli.rs
