[package]
name = "patme"
version = "0.1.0"
edition = "2021"
about = "An easy-to-use cli notify tool."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
confy = { version = "0.5.0", features = ["yaml_conf"], default-features = false }
notify-rust = "4"
powershell_script = "1.0.4"
serde = "1.0.144"
serde_derive = "1.0.144"
