[package]
name = "patme"
version = "0.1.0"
edition = "2021"
about = "An easy-to-use cli notify tool."
authors = ["ouromoros@gmail.com"]
description = "Easy-to-use CLI notification tool"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "patme"
path = "src/main.rs"

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
confy = { version = "0.5.0", features = ["yaml_conf"], default-features = false }
lettre = "0.10.1"
notify-rust = "4"
powershell_script = "1.0.4"
serde = "1.0.144"
serde_derive = "1.0.144"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
